--- a/environment.yml
+++ b/environment.yml
@@ -27,6 +27,7 @@ dependencies:
       - cycler==0.10.0
       - kiwisolver==1.2.0
       - matplotlib==3.3.2
+      - numpy-stl==2.12.0
       - pillow==7.2.0
       - pygame==1.9.6
       - pyparsing==2.4.7
